[gd_scene load_steps=2 format=2]

[ext_resource path="res://src/palette/Palette.gd" type="Script" id=1]

[node name="Palette" type="Control"]
margin_left = 256.0
margin_right = 1152.0
margin_bottom = 808.0
size_flags_horizontal = 3
script = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="AddRampButton" type="Button" parent="."]
anchor_left = 0.5
anchor_right = 0.5
margin_left = -64.0
margin_top = 48.0
margin_right = 64.0
margin_bottom = 80.0
text = "Add Ramp"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ScrollBox" type="ScrollContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 64.0
margin_top = 128.0
margin_right = -64.0
margin_bottom = -40.0
scroll_horizontal_enabled = false
__meta__ = {
"_edit_use_anchors_": false
}

[node name="RampContainer" type="VBoxContainer" parent="ScrollBox"]
margin_right = 768.0
margin_bottom = 640.0
rect_min_size = Vector2( 768, 640 )
custom_constants/separation = 32
[connection signal="pressed" from="AddRampButton" to="." method="_on_AddRampButton_pressed"]
